# codespaces-rust

./: Cargo.toml
.devcontainer/: devcontainer.json
launch/: Cargo.toml
launch/src/: main.rs
make/: Cargo.toml
make/src/: main.rs
src/: lib.rs  main.rs
tcore/: Cargo.toml
tcore/shaders/: GLOBALS.wgsl  card_layout_logic.wgsl  render_background.wgsl  render_card.wgsl
tcore/src/: game.rs  gui.rs  lib.rs  passes.rs  state.rs  utils.rs
tcore/src/game/: animation.rs  card.rs  gpu.rs  sequence.rs
tcore/src/game/card/: card_kind.rs
tcore/src/gui/: egui_renderer.rs
web/: index.html
web/pkg/: my_wasm.d.ts  my_wasm.js  my_wasm_bg.wasm  my_wasm_bg.wasm.d.ts  tcore.d.ts  tcore.js  tcore_bg.wasm  tcore_bg.wasm.d.ts
web/shaders/: GLOBALS.wgsl  card_layout_logic.wgsl  card_layout_logic_end.wgsl  render_card.wgsl
