[package]
name = "my_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]


[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2.125"
#web-sys = "0.3.102"
winit = "0.29"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Node",
    "Element"
]}
console_log = "1.0.0"
log = "0.4.32"


[workspace]
members = [
    ".",
    "make"
]

#wasm-pack build --target web


#cargo build --target wasm32-unknown-unknown --release
#wasm-bindgen --target web --out-dir web/pkg target/wasm32-unknown-unknown/release/my_wasm.wasm
#python3 -m http.server 9999 --directory web
