[workspace]
resolver="3"
members = [
    "tcore", 
    "launch",
    "make"
]

#wasm-pack build --target web


#cargo build --target wasm32-unknown-unknown --release
#wasm-bindgen --target web --out-dir web/pkg target/wasm32-unknown-unknown/release/my_wasm.wasm
#python3 -m http.server 9999 --directory web

