[package]
name = "tcore"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0.102"
bytemuck = "1.25.0"
image = "0.25.10"
regex = "1.12.4"
wgpu = "29.0.3"
winit = "0.29"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2.125"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Node",
    "Element",
    "Response"
]}
console_log = "1.0.0"
log = "0.4.32"
